# stm32_playground

./: .gitignore  .gitmodules  Cargo.toml  README.md  memory.x
.cargo/: config.toml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/standards/: index.yml
agent-os/standards/global/: coding-style.md  commenting.md  error-handling.md  tech-stack.md
cpp/: CMakeLists.txt  DEBUGGING.md  LIS3DSH_VERIFICATION.md  README.md  STM32F407VGTx_FLASH.ld  arm-none-eabi-gcc.cmake
cpp/App/Inc/: accelerometer.hpp  debug.hpp  led_controller.hpp  level_algorithm.hpp  rtt_log.h
cpp/App/Src/: accelerometer.cpp  debug.cpp  led_controller.cpp  level_algorithm.cpp  main.cpp
cpp/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
cpp/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
cpp/RTT/: SEGGER_RTT_Conf.h
presentation/: QA_PREP.md  README.md  STUDY_GUIDE.md  index.html
src/: accelerometer.rs  led_controller.rs  level_algorithm.rs  lib.rs
tests/: integration.rs
